big-price in Desktop spacing fix

--- a/styles.css
+++ b/styles.css
@@ -65,6 +65,7 @@ p {
     font-size: 2rem;
     color: hsl(158deg 36% 38%);
     margin: 0;
+    margin-right: 1rem;
 }
 
 button {
@@ -149,6 +150,10 @@ footer p {
         margin-left: 1.5rem;
         font-size: 0.86rem;
         width: 18rem;
+    }
+
+    .big-price {
+        margin-right: 0;
     }
 
     .old-price {
